# modbus_router

./: .gitignore  Cargo.toml  README.md
doc/: structure.excalidraw
python/: requirements.txt  run.py  tests.py  vfd_simulator.py
python/modbus_router/: enums.py  modbus.py  request.py  response.py
src/: example.rs
src/lib/: async_stdin.rs  batch.rs  error.rs  mod.rs  modbus.rs  poller.rs  router.rs  soft_request.rs
src/lib/devices/: mod.rs  template.rs
src/lib/devices/joystick/: device.rs  encoder.rs  requests.rs
src/lib/devices/vfd/: device.rs  encoder.rs  mod.rs  requests.rs
src/lib/traits/: device.rs  device_encoder.rs  mod.rs  polling.rs  request.rs  routing.rs
